Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

Changes for 0.xxx [xxxxxxxxxx]
==============================

 o Property loading cleanup in Global.java 
   Thanks to Peter Antman for the discussion

 o Fixed build.xml 'dist' task to include HSQLDB

 o Bugfix in persistence layer for huge messages.
   Reported by pikaiyuan

 o The jmxgui now uses only one XmlBlasterAccess to communicate with xmlBlaster

 o fix in JdbcQueueManager to avoid batch mode invocations if the DB does not 
   support this feature (particularly for hsqldb)

 o The SVG Javascript chess example is updated to this
   new release with some bugfixes, see
     http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.javascript.rhino.html

 o BUGFIX Java client library:
   In fail safe mode on client reconnect the subscribe
   specific callback redirect got lost and updates where
   delivered to the default callback handle.
   (The bug was introduced in 0.849 when fixing a memory leak).

 o Removed deprecated classes from package org.xmlBlaster.client:
      EraseKeyWrapper.java
      EraseQosWrapper.java
      GetKeyWrapper.java
      GetQosWrapper.java
      PublishKeyWrapper.java
      PublishQosWrapper.java
      SubscribeKeyWrapper.java
      SubscribeQosWrapper.java
      UnSubscribeKeyWrapper.java
      UnSubscribeQosWrapper.java
      EraseRetQos.java
      I_RetQos.java
      PublishRetQos.java
      SubscribeRetQos.java
      UpdateKey.java
      UpdateQos.java
      GetQos.java
   Please use the packages org.xmlBlaster.client.key and
   org.xmlBlaster.client.qos instead
   
 o Fixed build.bat to take more command line parameters

 o Added new connect QoS setting 'reconnectSameClientOnly' which
   allows us to enforce a client singleton - if you need to assure
   that a client can only connect exactly once, see
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.connect.html