@@ -1369,74 +1369,6 @@ public class Global implements Cloneable
    }
 
    /**
-    * Returns a JdbcManagerCommonTable for a specific queue. It strips the queueId to
-    * find out to which manager it belongs. If such a manager does not exist
-    * yet, it is created and initialized.
-    * A queueId must be of the kind: cb:some/id/or/someother
-    * where the important requirement here is that it contains a ':' character.
-    * text on the left side of the separator (in this case 'cb') tells which
-    * kind of queue it is: for example a callback queue (cb) or a client queue.
-    */
-   public synchronized JdbcManagerCommonTable getJdbcQueueManagerCommonTable(PluginInfo pluginInfo)
-      throws XmlBlasterException {
-
-      String location = ME + "/type '" + pluginInfo.getType() + "' version '" + pluginInfo.getVersion() + "'";
-      if (this.jdbcQueueManagersCommonTable == null) this.jdbcQueueManagersCommonTable = new Hashtable();
-
-      String managerName = pluginInfo.toString(); //  + "-" + pluginInfo.getTypeVersion();
-
-      // it is OK to use the same Hashtable since there should never be a JdbcCommonTableQueueManager 
-      // having the same  managerName as a JdbcQueueManager
-      Object obj = this.jdbcQueueManagersCommonTable.get(managerName);              
-      JdbcManagerCommonTable manager = null;
-      if (obj == null) {
-         JdbcConnectionPool pool = new JdbcConnectionPool();
-         try {
-            pool.initialize(this, pluginInfo.getParameters());
-            manager = new JdbcManagerCommonTable(pool, getEntryFactory(managerName));
-            pool.registerStorageProblemListener(manager);
-            manager.setUp();
-            if (log.TRACE) log.trace(ME, "Created JdbcManagerCommonTable instance for storage plugin configuration '" + managerName + "'");
-         }
-         catch (ClassNotFoundException ex) {
-            this.log.error(location, "getJdbcCommonTableQueueManager class not found: " + ex.getMessage());
-            throw new XmlBlasterException(this, ErrorCode.RESOURCE_DB_UNAVAILABLE, location, "getJdbcCommonTableQueueManager class not found", ex);
-         }
-         catch (SQLException ex) {
-            if (this.log.TRACE) this.log.trace(location, "getJdbcCommonTableQueueManager SQL exception: " + ex.getMessage());
-            throw new XmlBlasterException(this, ErrorCode.RESOURCE_DB_UNAVAILABLE, location, "getJdbcCommonTableQueueManager SQL exception", ex);
-         }
-         catch (Throwable ex) {
-            if (this.log.TRACE) this.log.trace(location, "getJdbcCommonTableQueueManager internal exception: " + ex.toString());
-            throw new XmlBlasterException(this, ErrorCode.INTERNAL_UNKNOWN, location, "getJdbcCommonTableQueueManager throwable", ex);
-         }
-
-         this.jdbcQueueManagersCommonTable.put(managerName, manager);
-      }
-      else manager = (JdbcManagerCommonTable)obj;
-
-      try {
-         if (!manager.getPool().isInitialized()) {
-//            manager.getPool().initialize(this, managerName + ".queue.persistent");
-            manager.getPool().initialize(this, pluginInfo.getParameters());
-            if (log.TRACE) log.trace(ME, "Initialized JdbcManager pool for storage class '" + managerName + "'");
-         }
-      }
-      catch (ClassNotFoundException ex) {
-         throw new XmlBlasterException(this, ErrorCode.RESOURCE_DB_UNAVAILABLE, location, "getJdbcQueueManager: class not found when initializing the connection pool", ex);
-      }
-      catch (SQLException ex) {
-         throw new XmlBlasterException(this, ErrorCode.RESOURCE_DB_UNAVAILABLE, location, "getJdbcQueueManager: sql exception when initializing the connection pool", ex);
-      }
-      catch (Throwable ex) {
-         if (this.log.TRACE) this.log.trace(location, "getJdbcCommonTableQueueManager internal exception: " + ex.toString());
-         throw new XmlBlasterException(this, ErrorCode.INTERNAL_UNKNOWN, location, "getJdbcQueueManager: throwable when initializing the connection pool", ex);
-      }
-      return manager;
-   }
-
-
-   /**
     * wipes out the db. The Properties to use as a default are these from the QueuePlugin with the 
     * configuration name specified by defaultConfName (default is 'JDBC'). You can overwrite these 
     * properties entirely or partially with 'properties'.
